# whiteapp_flask

./: .gitignore  pyproject.toml  wsgi.py
.github/workflows/: ci.yml
src/flask_whiteapp/: __init__.py
src/flask_whiteapp/apis/farm/: __init__.py  namespace_cows.py  namespace_sheeps.py
src/flask_whiteapp/apis/shelter/: __init__.py  config.toml  namespace_cats.py  namespace_dogs.py
tests/: __init__.py
