[build-system]
requires = ["setuptools >= 57.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask_whiteapp"
version = "0.0.0"
description = "flask whiteapp"
requires-python = ">=3.10.8"
readme = "README.md"
authors =  [ {name = "name", email = "email@email.com"}]

dependencies = [
  "Flask == 2.1.0",
  "flask-restx == 1.0.3",
  "werkzeug == 2.2.2" 
]

[project.optional-dependencies]
ci = ["build", "black", "pylint", "tox", "coverage"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = default



[testenv]
deps = 
    coverage
commands =
    coverage run -m unittest discover
    coverage xml -i
"""